--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <a class="page-scroll" href="#services">SJP</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Games</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Us</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Who We Are</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We are the BDS Committee</h3>
                 </div>
             </div>
             <div class="row text-center">
