--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <div class="intro-lead-in">Welcome To the BDS Campaign</div>
                 <div class="intro-heading">UIUCDivest</div>
                 <a href="#services" class="page-scroll btn btn-xl">Read the Referendum</a>
+                <!-- Hajira, the background photo is edited through 2 css files in the css folder. You need to edit both. -->
             </div>
         </div>
     </header>
@@ -104,7 +105,7 @@
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
+                    <span class="fa-stack fa-4x">               <!-- Hi this is a comment -->
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
