--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							  </ul>
 						  </li>
 
-              <li><a href="othercauses.html" class="js-href">Other Causes</a></li>
+              <li><a href="ourstruggles.html" class="js-href">Our Struggles</a></li>
 
 						</ul><!-- /.menu-list -->
 						
