Testing whether changing to lowercase will change it.

--- a/Companies.html
+++ b/Companies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Divest UIUC</title>
+	<title>Divest UIUC</title> <!-- Test -->
 
 	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
 
