Made a lot of major changes

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	
 	
     <div class="item item-1 active">
-	<img class="slider_second" src="images/quad.jpg" />
+	<img class="slider_second" src="images/quad2.jpg" />
       <div class="carousel-caption">
 
        
@@ -266,19 +266,25 @@
     <h2 class="about-title">About Us</h2>
     <p class="title-description">We are human rights advocates</p>
   </div><!-- /.title-area -->
+
+
   <div class="about-items">
+  <!-- Commenting out BDS Section
     <div class="col-sm-4">
      <div class="item">
       <div class="item-top">
        <h3 class="item-title">Boycott</h3>
        <h4 class="sub-title">products that take away Palestinian Freedom.</h4>
      </div><!-- /.item-top -->
-   
+
+
      <!--<a class="btn" href="#">
        <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
        More
      </a>-->
-   </div><!-- /.item -->
+
+<!--- Commenting out about Divest Section. Only need to erase this comment to uncomment everthing
+   </div>
  </div>
  <div class="col-sm-4">
    <div class="item">
@@ -291,7 +297,9 @@
      <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
      More
    </a>-->
- </div><!-- /.item -->
+
+<!-- Commenting out Sanctions Section
+ </div>
 </div>
 <div class="col-sm-4">
  <div class="item">
@@ -304,8 +312,10 @@
    <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
    More
  </a>-->
-</div><!-- /.item -->
-</div>
+
+ <!-- Need to uncomment this for above to work as well
+</div><
+</div>-->
 
  <p class="item-description">
  UIUC Divest is a student-led campaign calling on our administration to financially divest from corporations that directly profit from human rights violations in the Palestinian area. While we are a Palestinian advocacy group, we stand with all marginalized and oppressed people. We also call on the University of Illinois to divest from private prison systems and companies using child labor. Divestment is the removing of investment from corporations that profit from human rights abuses and violations of international law.
@@ -351,16 +361,16 @@
                 <div class="panel-heading" role="tab" id="headingOne">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                      Event #1 - 12/19/2019
+                      Tariq Poetry Night - 2/2/2017
                     </a>
                   </h4>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
                     <span class="service-image"><img src="images/services/1.jpg" alt="Service Image"></span>
-                    <span class="accordion-title">Lorem ipsum dolor sit amet</span>
+                    <span class="accordion-title">Tariq Poetry Night</span>
                     <p>
-                      consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi Sed egestas, ante et vulputate volutpat is, gravida id
+                      Come see Tariq perform at the Channing Murray Center his poetry about Palestine. Along with this, will be the official kickoff for UIUCDivest.
                     </p>
                   </div>
                 </div>
@@ -464,10 +474,12 @@
 	<p class="title-description ref-desc"><a href="https://illinois.edu/fb/sec/2018976">Please read and sign our referendum</a></p><br /><br />
 	
 	
-	
+	<!-- Commenting out the placement of the Scribd PDF for now
 	<iframe height="1000" width="100%" src="http://www.scribd.com/embeds/245682646/content?access_key=key-4mi0wEmuvFGEoBMziqtq&amp;jsapi=true&amp;xdm_e=http://www.safeumich.com&amp;xdm_c=default0&amp;xdm_p=1" id="" frameborder="0" style="border: 0px;"></iframe>
-	
-	
+	-->
+	<p class="referendum-content">
+    Shall the Students of the University of Illinois at Urbana-Champaign recommend to the University Administration that the University divest, or withdraw investments, from companies which actively engage in, fund, and/or normalize violations of the fundamental rights of marginalized groups in the U.S and abroad, including Palestinians, Native Americans, Black people, Latinx people, LGBTQ communities, and other economically and politically disenfranchised groups, and shall the Illinois Student Government use current socially responsible investment policies to evaluate and/or implement this divestment initiative?
+  </p>
  
   </div><!-- /.about-area -->
   </div><!-- /.container -->
@@ -508,7 +520,7 @@
               </div>
               <div class="col-sm-6">
                 <p class="item-description">
-                  What is the Boycott, Divestment and sanctions (BDS) movement? How does BDS help the Palestinian struggle for freedom, justice and equality?   
+                  What is the Boycott, Divestment and sanctions (BDS) movement? 
                 </p><!-- /.item-description -->
                 <a class="btn" href="faq.html">
                   <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
@@ -526,7 +538,7 @@
               </div>
               <div class="col-sm-6">
                 <p class="item-description">
-                  Organization #1, Organization #2, Organization #3, Organization #4, etc.. 
+                  Students for Justice in <br /> Palestine 
                 </p><!-- /.item-description -->
                 <a class="btn" href="letters.html">
                   <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
@@ -548,7 +560,7 @@
               </div>
               <div class="col-sm-6">
                 <p class="item-description">
-                  Northrop Grumman, General Electric, Motorola Solutions Inc., Raytheon Company, and more...   
+                  Northrop Grumman, General Electric, Raytheon Company, etc...   
                 </p><!-- /.item-description -->
                 <a class="btn" href="companies.html">
                   <span class="btn-icon"><i class="fa fa-arrow-circle-right"></i></span>
