Fixed Contact Us and Mobile Friendliness

--- a/index.html
+++ b/index.html
@@ -713,10 +713,10 @@
 
     <div id="message-details" class="message-details">
       <div class="container">
-        <form action="email.php" method="post" id="myForm" class="message-form">
+        <form action="https://formspree.io/uiucdivest@gmail.com" method="post" id="myForm" class="message-form">
           <div class="row">
             <div class="col-sm-6">
-              <input id="author" class="form-control" name="author" type="text" value="" size="30" aria-required="true" placeholder="Name*" title="Name" required>
+              <input id="author" class="form-control" name="name" type="text" value="" size="30" aria-required="true" placeholder="Name*" title="Name" required>
               <input id="email" class="form-control" name="email" type="email" value="" size="30" aria-required="true" placeholder="Email*" title="Email"  required>
               <input id="subject" class="form-control" name="subject" type="subject" value="" size="30" aria-required="true" placeholder="Subject*" title="Subject"  required>
             </div>
