--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
        
 	<div class="carousel-title with-buttons">
 		<a class="btn-lg btn-primary" href="#referendum">Referendum</a>
-		<a class="btn-lg btn-primary" href="https://illinois.edu/fb/sec/2018976">Sign petition</a>
+		<a class="btn-lg btn-primary" href="#page-top">Petition Coming Soon</a>
        </div>
      
        <!--<a class="btn text-btn" href="#">More Info</a>-->
@@ -351,7 +351,7 @@
     <div class="row">
      <div class="service-area" style="width: 100%;">
      <h2 class="events-title">Upcoming events!</h2>
-     <p class="events-title-description">Check out our upcoming events below!</p>
+     <p class="events-title-description">Check out our upcoming events!</p>
      <div class="service-items">
 	<div class="col-sm-6">
           <div class="service-accordion">
@@ -361,16 +361,16 @@
                 <div class="panel-heading" role="tab" id="headingOne">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                      Tariq Poetry Night - 2/2/2017
+                      UIUC Divest Launch Party - 2/2/2017
                     </a>
                   </h4>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
-                    <span class="service-image"><img src="images/services/1.jpg" alt="Service Image"></span>
-                    <span class="accordion-title">Tariq Poetry Night</span>
+                    <span class="service-image"><img src="images/services/tariq.jpg" alt="Service Image"></span>
+                    <span class="accordion-title">Channing Murray Foundation, 7 pm</span>
                     <p>
-                      Come see Tariq perform at the Channing Murray Center his poetry about Palestine. Along with this, will be the official kickoff for UIUCDivest.
+                      Join us at the Channing Murray Foundation to celebrate this launch and to learn more about our campaign, goals, and who we are. We will be hosting a multitude of poets and performers, including Detroit-based Palestinian-American poet Tariq Luthun. Doors open at 7pm, with the event starting at 7:30pm. Refreshments will be provided, with snacks in part provided by Mashawi Grill.
                     </p>
                   </div>
                 </div>
@@ -379,15 +379,16 @@
                 <div class="panel-heading" role="tab" id="headingTwo">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Event #2 - 1/13/2019
+                      Palestine Legal - Know Your Rights Workshop - 2/9/2017
                     </a>
                   </h4>
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
-                    <span class="service-image"><img src="images/services/2.jpg" alt="Service Image"></span>
+                    <span class="service-image"><img src="images/services/PalestineLegal.png" alt="Service Image"></span>
+                    <span class="accordion-title">Location: TBD; 6-7:30pm</span>
                     <p>
-                      consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi Sed egestas, ante et vulputate volutpat is, gravida id
+                      Come join us and learn about your rights on campus while dealing with the issue of UIUC Divest. Lawyers from Palestine Legal will we walking us through do's and dont's while spreading awareness about the conflicts of the Palestinians and other socioeconomically disadvantaged groups.
                     </p>
                   </div>
                 </div>
@@ -412,16 +413,16 @@
                 <div class="panel-heading" role="tab" id="headingSeven">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                       Event #7 - 2/29/2019
+                       Hot Chocolate/Tea on the Quad - 2/6/2017
                     </a>
                   </h4>
                 </div>
                 <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                   <div class="panel-body">
-                    <span class="service-image"><img src="images/services/3.jpg" alt="Service Image"></span>
-                    <span class="accordion-title">Lorem ipsum dolor sit amet</span>
+                    <span class="service-image"><img src="images/services/tea.jpg" alt="Service Image"></span>
+                    <span class="accordion-title">Tables on the Quad side of the Union, 8am -4pm</span>
                     <p>
-                      consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi Sed egestas, ante et vulputate volutpat is, gravida id
+                      Join us for some free Hot Chocolate or Tea at the Table next to the stairs in the South Side of the Union and learn about UIUC Divest, Palestine, and the intersectionality with other issues.
                     </p>
                   </div>
                 </div>
@@ -430,15 +431,15 @@
                 <div class="panel-heading" role="tab" id="headingEight">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                       Event #8 - 2/29/2019
+                       Coming Soon
                     </a>
                   </h4>
                 </div>
                 <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
                   <div class="panel-body">
-                    <span class="service-image"><img src="images/services/2.jpg" alt="Service Image"></span>
+                    <span class="service-image"><img src="images/services/logo.png" alt="Service Image"></span>
                     <p>
-                      consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi Sed egestas, ante et vulputate volutpat is, gravida id
+                      Another event is being planned and will be released upon confirmation that it will be happening
                     </p>
                   </div>
                 </div>
@@ -471,7 +472,7 @@
  <div class="container">
   <div class="about-area ref-area">
 	<h2 class="about-title ref-title">Our Referendum</h2>
-	<p class="title-description ref-desc"><a href="https://illinois.edu/fb/sec/2018976">Please read and sign our referendum</a></p><br /><br />
+	<p class="title-description ref-desc"><a href="#referendum">Petition Signing Link Coming Soon</a></p><br /><br />
 	
 	
 	<!-- Commenting out the placement of the Scribd PDF for now
@@ -621,49 +622,49 @@
         <div class="item-image">
           <img src="images/gellery1.jpg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/gellery2.jpeg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/gellery3.jpeg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/gellery4.png" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/gellery5.jpeg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/gellery6.png" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/portfolio/3.jpg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
           <img src="images/portfolio/4.jpg" alt="Portfolio Image">
         </div>
-        <span class="item-title">Content here content here</span>
+        <span class="item-title"></span>
       </div>
     </div>
   </div><!-- /.portfolio-area -->
@@ -687,7 +688,7 @@
 <section id="subscribe-section" class="subscribe-section text-center">
   <div class="container">
 	<h1>
-	It's time to tell the <span style="color: white;font-weight: 700;">University of Illinois</span> to divest from <span style="color: red;">injustice</span>. <a href="https://illinois.edu/fb/sec/2018976">Join us today.</a> 
+	It's time to tell the <span style="color: white;font-weight: 700;">University of Illinois</span> to divest from <span style="color: red;">injustice</span>. <a href="#referendum">Join us today.</a> 
 	</h1>
     <!--<form class="news-letter" method="post">
       <p class="alert-success"></p>
