--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Divest UIUC</title>
+	<title>UIUC Divest</title>
+
+  <!-- Favicon -->
+    <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
 
 	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
 
