Updated Photos on Main Page

--- a/index.html
+++ b/index.html
@@ -623,49 +623,49 @@
     <div id="portfolio-slider" class="portfolio-slider owl-carousel owl-theme">
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery1.jpg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16403222_290945071320604_4693708208942480308_o.jpg?oh=bf52f7a4aafb6827beb2be65ea19da00&oe=59160E9E" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery2.jpeg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16463335_290945951320516_6738303033265360209_o.jpg?oh=2a1ad88219c9ee6937f14ef3ab156d46&oe=593F04F0" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery3.jpeg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16487563_290946407987137_3218228124492699227_o.jpg?oh=19bc774306e750671b2c8c29d973e405&oe=59014792" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery4.png" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16403352_290943701320741_5960243454279014378_o.jpg?oh=0848657fa2929f1008d9705b4bce4156&oe=590BAEEC" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery5.jpeg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16423197_290946487987129_7045878501817424454_o.jpg?oh=35115422232c894a46b6656578ec8658&oe=59423F6B" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/gellery6.png" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16486975_290948677986910_9154490051151797644_o.jpg?oh=dabe040f7c2bfd6e9adc8f09e44811f0&oe=5915CF8F" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/portfolio/3.jpg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16402608_290949461320165_9178459179302513178_o.jpg?oh=56d02dffb563eca3d363cb1187fea492&oe=590E1506" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
       <div class="item">
         <div class="item-image">
-          <img src="images/portfolio/4.jpg" alt="Portfolio Image">
+          <img src="https://scontent-ord1-1.xx.fbcdn.net/v/t31.0-8/16463112_290948434653601_7384434956837677351_o.jpg?oh=6e5652e01b61dba334d9a4df9dbb87fd&oe=590D1A64" alt="Portfolio Image">
         </div>
         <span class="item-title"></span>
       </div>
