--- a/letters.html
+++ b/letters.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Divest UIUC</title>
-
+<!-- Favicon -->
+    <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
+    
 	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
 
 	<meta name="author" content="Jewel Theme">
