Change Head 'Divest UIUC' to 'UIUC Divest'

--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Divest UIUC</title>
+	<title>UIUC Divest</title>
 <!-- Favicon -->
     <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
     
