--- a/companies.html
+++ b/companies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Divest UIUC</title> <!-- Test -->
+	<title>UIUC Divest</title> <!-- Test -->
 <!-- Favicon -->
     <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
     
