--- a/blogs2.html
+++ b/blogs2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Divest UIUC</title>
+	<title>UIUC Divest</title>
 <!-- Favicon -->
     <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
     
