Changed Date of Hot Chocolate Event

--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
                 <div class="panel-heading" role="tab" id="headingSeven">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                       Hot Chocolate/Tea on the Quad - 2/6/2017
+                       Hot Chocolate/Tea on the Quad - TBD
                     </a>
                   </h4>
                 </div>
                 <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                   <div class="panel-body">
                     <span class="service-image"><img src="images/services/tea.jpg" alt="Service Image"></span>
-                    <span class="accordion-title">Tables on the Quad side of the Union, 9am -4pm</span>
+                    <span class="accordion-title">Tables on the Quad side of the Union, 10am -3pm</span>
                     <p>
                       Join us for some free Hot Chocolate or Tea at the Table next to the stairs in the South Side of the Union and learn about UIUC Divest, Palestine, and the intersectionality with other issues.
                     </p>
