--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 	<iframe height="1000" width="100%" src="http://www.scribd.com/embeds/245682646/content?access_key=key-4mi0wEmuvFGEoBMziqtq&amp;jsapi=true&amp;xdm_e=http://www.safeumich.com&amp;xdm_c=default0&amp;xdm_p=1" id="" frameborder="0" style="border: 0px;"></iframe>
 	-->
 	<p class="referendum-content">
-    Shall the Students of the University of Illinois at Urbana-Champaign recommend to the University Administration that the University divest, or withdraw investments, from companies which actively engage in, fund, and/or normalize violations of the fundamental rights of marginalized groups in the U.S and abroad, including Palestinians and other economically and politically disenfranchised groups, and shall the Illinois Student Government use current socially responsible investment policies to evaluate and/or implement this divestment initiative?
+    Coming Soon!
   </p>
  
   </div><!-- /.about-area -->
