Location & Time Updated

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
                     <span class="service-image"><img src="images/services/PalestineLegal.png" alt="Service Image"></span>
-                    <span class="accordion-title">Location: TBD; 6-7:30pm</span>
+                    <span class="accordion-title">Location: Rm. 1065; 6-7:30pm</span>
                     <p>
                       Come join us and learn about your rights on campus while dealing with the issue of UIUC Divest. Lawyers from Palestine Legal will we walking us through do's and dont's while spreading awareness about the conflicts of the Palestinians and other socioeconomically disadvantaged groups.
                     </p>
@@ -416,7 +416,7 @@
                 <div class="panel-heading" role="tab" id="headingSeven">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                       Hot Chocolate/Tea on the Quad - TBD
+                       Hot Chocolate/Tea on the Quad - 2/9/2017
                     </a>
                   </h4>
                 </div>
