Info on Marginalized Groups added

--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@
 	<p class="referendum-content">
     Shall the Students of the University of Illinois at Urbana-Champaign recommend to the Board of Trustees that the University divest, or withdraw investments, from companies which actively normalize, engage in, or fund recognized human rights violations of marginalized groups worldwide?
   </p>
- 
+  <p class="title-description ref-desc"><a href="http://uiucdivest.com/ourstruggles.html">For more information on marginalized groups and what we stand for, click here!</a></p>
+
   </div><!-- /.about-area -->
   </div><!-- /.container -->
 
